# drf_homework

./: .gitignore  README.md  config.ini.sample  pyproject.toml
apps/materials/: admin.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
apps/materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_course_preview_alter_lesson_preview_and_more.py  0004_course_price.py  0005_remove_course_price.py  0006_alter_subscription_course_alter_subscription_user.py
apps/materials/serializers/: course.py  lesson.py  subscription.py
apps/materials/views/: course.py  lesson.py  subscription.py
apps/users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_remove_users_username.py  0003_payments_amount_payments_payment_id_and_more.py  0004_remove_payments_amount_payments_payment_status_and_more.py
apps/users/models/: payments.py  users.py
apps/users/serializers/: payments.py  users.py
config/: settings.py  urls.py
fixtures/: 01_auth.json  02_users.json  03_courses.json  04_lessons.json  05_payments.json  06_subscription.json
